--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="action_bar_video">Video</string>
     <string name="action_bar_player">Player</string>
     <string name="zero_time">00:00</string>
+    <string name="repeat_mode">Repeat mode</string>
 </resources>
