--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="play">Play</string>
     <string name="pause">Pause</string>
     <string name="reset">Reset</string>
-    <string name="previous"><![CDATA[<<]]></string>
-    <string name="next"><![CDATA[>>]]></string>
+    <string name="previous">Prev></string>
+    <string name="next">Next</string>
     <string name="test_player">Test Player</string>
     <string name="mo_player">MO Player</string>
 
@@ -14,6 +14,7 @@
     <string name="albums">Albums</string>
     <string name="artists">Artists</string>
     <string name="genres">Genres</string>
+    <string name="favorites">Favorites</string>
 
     <string name="video_not_found">Video Not Found</string>
 
