--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="zero_time">00:00</string>
     <string name="repeat_mode">Repeat mode</string>
     <string name="player">Player</string>
+    <string name="settings">Settings</string>
 </resources>
